// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`messageHtmlToComponent latex with enabled latex plugin 1`] = `
Array [
  <p>
    This is some latex!
  </p>,
  "
",
  <Connect(Pluggable)
    content="x^2 + y^2 = z^2
"
    pluggableId="LatexPlugin"
    pluggableName="CodeBlockComponent"
  />,
  <Connect(Pluggable)
    content="F_m - 2 = F_0 F_1 \\\\dots F_{m-1}
"
    pluggableId="LatexPlugin"
    pluggableName="CodeBlockComponent"
  />,
  <p>
    That was some latex!
  </p>,
]
`;

exports[`messageHtmlToComponent latex without enabled latex plugins 1`] = `
Array [
  <p>
    This is some latex!
  </p>,
  "
",
  <div
    className="post-code"
  >
    <span
      className="post-code__language"
    >
      TeX
    </span>
    <code
      className="hljs"
    >
      x^2 + y^2 = z^2

    </code>
  </div>,
  <div
    className="post-code"
  >
    <span
      className="post-code__language"
    >
      TeX
    </span>
    <code
      className="hljs"
    >
      F_m - 2 = F_0 F_1 
      <span
        className="hljs-tag"
      >
        \\
        <span
          className="hljs-name"
        >
          dots
        </span>
      </span>
       F_{m-1}

    </code>
  </div>,
  <p>
    That was some latex!
  </p>,
]
`;

exports[`messageHtmlToComponent link with enabled a tooltip plugin 1`] = `
<p>
  lorem ipsum 
  <a
    className="theme markdown__link"
    href="http://www.dolor.com"
    rel="noreferrer"
    target="_blank"
  >
    <LinkTooltip
      href="http://www.dolor.com"
      title="www.dolor.com"
    />
  </a>
   sit amet
</p>
`;

exports[`messageHtmlToComponent link without enabled tooltip plugins 1`] = `
<p>
  lorem ipsum 
  <a
    className="theme markdown__link"
    href="http://www.dolor.com"
    rel="noreferrer"
    target="_blank"
  >
    www.dolor.com
  </a>
   sit amet
</p>
`;

exports[`messageHtmlToComponent plain text 1`] = `
<p>
  Hello, world!
</p>
`;
